# Pretrained-Models-for-Multilingual-Federated-Learning

./: README.md  client_app.py  pyproject.toml  server_app.py  utils.py
data/: clean_and_split_data.py  copy_to_data_folder.sh
